manifests/alert-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alert-deployment
  namespace: assignment
  labels:
    app: alert
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alert
  template:
    metadata:
      labels:
        app: alert
    spec:
      containers:
        - name: alert
          image: ccuni/alert-service-2025w
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
