manifests/collector-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: collector-deployment
  namespace: assignment
  labels:
    app: collector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: collector
  template:
    metadata:
      labels:
        app: collector
    spec:
      containers:
        - name: collector
          image: gcr.io/a12437815/collector-service:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
          livenessProbe:
            httpGet:
              path: /livenessProbe
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /readinessProbe
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
