manifests/alert-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: alert
  namespace: assignment
spec:
  selector:
    app: alert
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
