manifests/collector-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: collector-service
  namespace: assignment
spec:
  selector:
    app: collector
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
