manifests/section-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: section
  namespace: assignment
spec:
  selector:
    app: section
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
